hphp/hack/test/typecheck/imports_toplevel_strict.php.exp
File "imports_toplevel_strict.php", line 2, characters 1-45:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
File "imports_toplevel_strict.php", line 3, characters 1-44:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
File "imports_toplevel_strict.php", line 4, characters 1-19:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
File "imports_toplevel_strict.php", line 5, characters 1-19:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
